# INFUR

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INTERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infer_hub/: __init__.py  config.py  db.py  limits.py  models.py  ollama.py
infer_hub/api/: app.py  main.py  rate_limit.py
infer_hub/worker/: runner.py
scripts/: demo.sh  load_test.py  load_test.sh  run_api.sh  run_worker.sh  setup.sh
tests/: test_api.py
